testsuite/tests/contrib/lkt_semantic/generic_covariance/test.out
Resolving test.lkt
==================
Id   <RefId "T" test.lkt:3:11-3:12>
     references <GenericFormalTypeDecl "T" test.lkt:1:15-1:16>

Id   <RefId "Int" test.lkt:4:12-4:15>
     references <StructDecl prelude: "Int">

Id   <RefId "TestNode" test.lkt:8:14-8:22>
     references <ClassDecl "TestNode" test.lkt:7:1-7:18>

Id   <RefId "TestNode" test.lkt:9:19-9:27>
     references <ClassDecl "TestNode" test.lkt:7:1-7:18>

Id   <RefId "Expr" test.lkt:10:13-10:17>
     references <ClassDecl "Expr" test.lkt:8:1-8:25>

Id   <RefId "TestEntity" test.lkt:12:4-12:14>
     references <GenericDecl "TestEntity" test.lkt:1:1-5:2>

Id   <RefId "Lit" test.lkt:12:15-12:18>
     references <ClassDecl "Lit" test.lkt:10:1-10:20>

Id   <RefId "TestEntity" test.lkt:13:4-13:14>
     references <GenericDecl "TestEntity" test.lkt:1:1-5:2>

Id   <RefId "TestNode" test.lkt:13:15-13:23>
     references <ClassDecl "TestNode" test.lkt:7:1-7:18>

Id   <RefId "A" test.lkt:13:27-13:28>
     references <FieldDecl "A" test.lkt:12:1-12:19>

Expr <RefId "A" test.lkt:13:27-13:28>
     has type <InstantiatedGenericType "TestEntity[TestNode]" test.lkt:1:1-5:2>

Id   <RefId "TestEntity" test.lkt:14:13-14:23>
     references <GenericDecl "TestEntity" test.lkt:1:1-5:2>

Id   <RefId "Statement" test.lkt:14:24-14:33>
     references <ClassDecl "Statement" test.lkt:9:1-9:30>

Id   <RefId "A" test.lkt:14:37-14:38>
     references <FieldDecl "A" test.lkt:12:1-12:19>

test.lkt:14:37: error: Mismatched types: expected `TestEntity[Statement]`, got `TestEntity[Lit]`
13 | @invalid C: TestEntity[Statement] = A
   |                                     ^

