testsuite/tests/contrib/lkt_semantic/generic_covariance/test.lkt
generic [@out T]
struct TestEntity {
    node: T
    other: Int
}

class TestNode {}
class Expr : TestNode {}
class Statement : TestNode {}
class Lit : Expr {}

A: TestEntity[Lit]
B: TestEntity[TestNode] = A
@invalid C: TestEntity[Statement] = A
